--- a/aboutpage.html
+++ b/aboutpage.html
@@ -1,1 +1,25 @@
-<a href="#" class="nav-label">ABOUT US <i class="fa-solid fa-chevron-up"></i></a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Page</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <div class="header-left">
+            <img src="logo.png" alt="School Logo">
+            <h1>School Name</h1>
+        </div>
+        <!-- Removed header-right div here -->
+    </header>
+    <main>
+        <h2>About Us</h2>
+        <p>This is the about page content.</p>
+    </main>
+    <footer>
+        <p>&copy; 2026 School Name. All Rights Reserved.</p>
+    </footer>
+</body>
+</html>
